--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
   outline: none;
 }
 
+a {
+  all: unset;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -17,6 +21,13 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+@media screen and (min-width: 2000px) {
+  .cta-img {
+    width: 280px;
+    height: 80px;
+  }
 }
 
 .container {
@@ -206,8 +217,8 @@ input[type=number] {
   transition: 0.5s all;
   cursor: pointer;
   z-index: 5;
-  width:154px;
-  height:44px;
+  width: 154px;
+  height: 44px;
 }
 .head-cta-button:hover {
   transform: scale(1.1) translate(-50%, -50%);
@@ -498,7 +509,6 @@ input[type=number] {
 }
 @media screen and (min-width: 650px) {
   .payments {
-    margin-right: 42px;
     margin-bottom: 14px;
   }
 }
@@ -577,7 +587,9 @@ footer {
   border: none;
   background: none;
   margin-top: 16px;
-  padding-bottom: 32px;
+  margin-bottom: 32px;
+  width: 180px;
+  height: 36px;
 }
 
 /* The Modal (background) */
@@ -713,4 +725,5 @@ footer > p {
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
+  margin-bottom: 18px;
 }/*# sourceMappingURL=style.css.map */
